--- a/blogger-f/package.json
+++ b/blogger-f/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.1",
     "animate.css": "^4.1.1",
     "element-plus": "^2.2.2",
     "less": "^4.1.2",
@@ -21,6 +22,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.8.6",
+    "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
