注册,登录接口

--- a/blogger-f/package.json
+++ b/blogger-f/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.1",
     "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "element-plus": "^2.2.2",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
